<resources>
    <string name="app_name">JustJava</string>
    <string name="quantity">Quantity</string>
    <string name="addButton">+</string>
    <string name="quantity_text_view">0</string>
    <string name="subtractButton">-</string>
    <string name="price">Price</string>
    <string name="price_text_view">$0.00</string>
    <string name="orderButton">Order</string>
    <string name="notes">Notes</string>
    <string name="add_note_button">Add Note</string>
    <string name="notes_hint_text_view">Notes:</string>
</resources>
