<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="16dp"
            android:paddingTop="16sp"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/subtractButton" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/quantity_text_view"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/addButton" />

        </LinearLayout>

        <Button
            android:id="@+id/add_notes_button"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:onClick="showEditText"
            android:text="Add Note" />

        <EditText
            android:id="@+id/notes_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/notes"
            android:inputType="textPersonName"
            android:textColor="@android:color/darker_gray"
            tools:text="Notes:"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="16dp"
            android:text="@string/price"
            android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/othernotes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="16dp"
            android:text="Notes: "
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:visibility = "gone"/>

        <TextView
            android:id="@+id/notes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="16dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:paddingBottom="16dp"
            android:text="@string/price_text_view"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:onClick="submitOrder"
            android:text="@string/orderButton" />

    </LinearLayout>
</ScrollView>